--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-flash": "github:RGBboy/express-flash",
     "express-session": "^1.18.0",
     "mongoose": "^8.1.1",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   },
